# allocator

./: .travis.yml  CMakeLists.txt  main.cpp  myallocator.h  mycontainer.h
